syntax="proto3";
package ss;

enum SS_COMMON_RESULT {
  SUCCESS = 0;
  FAILED = 1;
  NOEXIST = 2;
  PERMISSION = 3; //no permission
}

enum SS_SPEC_UID {
  SYS_UID = 0;
}


enum SS_COMMON_REASON {
  REASON_TICK = 0;  //ticker save
  REASON_UPDATE = 1; //activate save
  REASON_EXIT = 2; //server exit
}

enum SS_COMMON_TYPE {
  COMM_TYPE_NORMAL = 0;
  COMM_TYPE_HISTORY = 1;
}



enum SS_OFFLINE_INFO_TYPE {
  OFT_KICK_GROUP = 0; //kick out group by master <type|grp_id|grp_name|kick_ts>
}

enum SS_COMMON_QUERY_TYPE {
  QRY_OWN_SNAP = 0;
}

enum SS_GROUP_INFO_FIELD {
  GRP_FIELD_ALL = 0;
  GRP_FIELD_SNAP = 1;
}

enum GROUP_ATTR_TYPE {
  GRP_ATTR_VISIBLE = 0;		//cound be shown on panel
  GRP_ATTR_INVISIBLE = 1;	//only be searched by group id
  GRP_ATTR_DESC = 2;  //change group desc
  GRP_ATTR_GRP_NAME = 3; //change group name
  GRP_ATTR_HEAD_URL = 4; //group head url
}